Add form and function to POST unsorted string to server

--- a/client/index.html
+++ b/client/index.html
@@ -4,5 +4,10 @@
   <title>Char Sortinator</title>
 </head>
 <body>
+  <form>
+    <input type="input" name="Input String">
+    <input type="submit">
+  </form>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
