Create request on submit and return sorted string

--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <title>Char Sortinator</title>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
-  <form>
-    <input type="input" name="Input String">
-    <input type="submit">
-  </form>
-  <script type="text/javascript" src="index.js"></script>
+  <div>Add String to Sort:</div>
+  <input type="input" id="inputBox">
+  <input type="submit" id="input-ready">
+  <div>Sorted String:</div>
+  <div id="sorted">results here</div>
+  <script type="text/javascript" src="sortFunc.js"></script>
 </body>
 </html>
